--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,15 @@
 
 buildscript {
     repositories {
+        maven {
+            url "https://bintray.com/wechat-sdk-team/maven"
+        }
         jcenter()
+        google()
+        maven { url 'https://dl.bintray.com/umsdk/release' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha13'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,7 +19,12 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url "https://bintray.com/wechat-sdk-team/maven"
+        }
+        google()
         jcenter()
+        maven { url 'https://dl.bintray.com/umsdk/release' }
     }
 }
 
